--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@emailjs/browser": "^3.11.0",
     "ng-sidebarjs": "^14.0.0",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
-    "swiper": "^11.0.4",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
