--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/aos/dist/aos.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -90,8 +91,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/aos/dist/aos.css",
+              "src/styles.css"
             ],
             "scripts": []
           }
