--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@emailjs/browser": "^3.11.0",
+    "@types/aos": "^3.0.7",
+    "aos": "^3.0.0-beta.6",
     "ng-sidebarjs": "^14.0.0",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^18.0.0",
